applications/garage/admin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: garage-admin
spec:
  type: ClusterIP
  ports:
    - name: admin
      port: 3903
      targetPort: 3903
      protocol: TCP
  selector:
    app.kubernetes.io/instance: garage
    app.kubernetes.io/name: garage
