applications/garage/public-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: garage-s3-public
  namespace: applications
spec:
  ingressClassName: cloudflare-tunnel
  rules:
    - host: s3.vaughn.sh
      http:
        paths:
          - path: /cdn
            pathType: Prefix
            backend:
              service:
                name: garage
                port:
                  number: 3900
